# pretty-hal-machine

./: CHANGELOG.md  README.md  RELEASE.md
.github/workflows/: embedded-builds.yml  fmt.yml  host-builds.yaml
common/phm-icd/: Cargo.toml
common/phm-icd/src/: lib.rs
examples/feature-demos/: Cargo.toml  README.md
examples/i2c-oled-example/: Cargo.toml
examples/uart-example/: Cargo.toml
examples/uart-example/src/: main.rs
firmware/blackpill-phm/: Cargo.toml  memory.x
firmware/blackpill-phm/.cargo/: config.toml
firmware/blackpill-phm/src/: i2c.rs  lib.rs  main.rs  monotonic.rs
firmware/nrf52-phm/: Cargo.toml
firmware/nrf52-phm/src/: lib.rs  main.rs  uart.rs
firmware/nrf52-phm/tests/: integration.rs
firmware/phm-worker/: Cargo.toml
firmware/phm-worker/src/: lib.rs
firmware/rp2040-phm/: Cargo.toml
firmware/rp2040-phm/.cargo/: config.toml
firmware/rp2040-phm/src/: lib.rs  main.rs  monotonic.rs  uart.rs
firmware/rp2040-phm/tests/: integration.rs
host/i2c-oled-example/: Cargo.toml  README.md
host/i2c-oled-example/src/: main.rs
host/phm/: Cargo.toml
host/phm-cli/: Cargo.toml  README.md
host/phm-cli/src/: cli.rs  main.rs
host/phm/src/: lib.rs
nrf52-phm/: Cargo.toml
phm-cli/: Cargo.toml
phm-cli/src/: main.rs
phm-icd/: Cargo.toml
phm-icd/src/: lib.rs
