[package]
name = "phm-icd"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7.10"

[dependencies.defmt]
version = "0.3.0"
optional = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[features]
use-defmt = ["defmt", "heapless/defmt-impl"]
