[package]
name = "phm-icd"
version = "0.0.1"
description = "The Interface Control Document (ICD) for Pretty HAL Machine"
repository = "https://github.com/jamesmunns/pretty-hal-machine"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "../../README.md"

categories = [
    "embedded",
]
license = "MIT OR Apache-2.0"

[dependencies.heapless]
version = "0.7.10"
features = ["serde"]

[dependencies.defmt]
version = "0.3.0"
optional = true

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[features]
use-defmt = ["defmt", "heapless/defmt-impl"]

[package.metadata.docs.rs]
all-features = true