[package]
name = "phm-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.0"
embedded-hal = "0.2.6"
nb = "1.0.0"

[dependencies.heapless]
version = "0.7.10"

[dependencies.phm-icd]
path = "../../common/phm-icd"
features = ["use-defmt"]
