[package]
name = "phm-worker"
version = "0.0.2"
description = "The Embedded Worker for Pretty HAL Machine"
repository = "https://github.com/jamesmunns/pretty-hal-machine"
authors = [
    "James Munns <james@onevariable.com>",
    "Henrik AlseÌr <henrik.alser@me.com>",
]
edition = "2021"
readme = "../../README.md"

categories = [
    "embedded",
]
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "0.3.0"
embedded-hal = "0.2.6"
nb = "1.0.0"

[dependencies.heapless]
version = "0.7.10"

[dependencies.phm-icd]
path = "../../common/phm-icd"
features = ["use-defmt"]
