[package]
name = "phm-cli"
version = "0.0.2"
description = "The Interface Control Document (ICD) for Pretty HAL Machine"
repository = "https://github.com/jamesmunns/pretty-hal-machine"
authors = [
    "James Munns <james@onevariable.com>",
    "Henrik Alsér <henrik.alser@me.com>",
    "Tirth Jain <jaintirth24@gmail.com>",
]
edition = "2021"
readme = "README.md"

categories = [
    "embedded",
]
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "0.2.6"
serialport = "4.0.1"
clap = { version = "3.0.14", features = ["derive"] }

[dependencies.phm]
path = "../phm"
version = "0.0.2"
