[package]
name = "phm"
version = "0.0.1"
description = "Pretty HAL Machine"
repository = "https://github.com/jamesmunns/pretty-hal-machine"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "../../README.md"

categories = [
    "embedded",
]
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "0.2.6"
serde = "1.0.136"
serialport = "4.0.1"

[dependencies.heapless]
version = "0.7.10"
features = ["serde"]

[dependencies.postcard]
version = "0.7.3"
features = ["use-std"]

[dependencies.phm-icd]
version = "0.0.1"
path = "../../common/phm-icd"
