[package]
authors = ["James Munns <james@onevariable.com>"]
categories = ["embedded"]
description = "Pretty HAL Machine"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "phm"
readme = "../../README.md"
repository = "https://github.com/jamesmunns/pretty-hal-machine"
version = "0.0.1"

[dependencies]
embedded-hal = "0.2.6"
nb = "1.0.0"
serde = "1.0.136"
serialport = "4.0.1"

[dependencies.heapless]
features = ["serde"]
version = "0.7.10"

[dependencies.phm-icd]
path = "../../common/phm-icd"
version = "0.0.1"

[dependencies.postcard]
features = ["use-std"]
version = "0.7.3"
